# tt_scale

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_sampling.sbatch  tt_scale.toml
config/: example.yaml
logs/: matharena_Qwen_Qwen2.5-3B-Instruct-AWQ.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M1_K1_MathArena_aime_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M1_K1_MathArena_apex_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M1_K1_MathArena_brumo_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M1_K1_MathArena_cmimc_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M1_K1_MathArena_hmmt_nov_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K1_MathArena_aime_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K1_MathArena_apex_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K1_MathArena_brumo_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K1_MathArena_cmimc_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K1_MathArena_hmmt_nov_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K2.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K2_MathArena_aime_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K2_MathArena_apex_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K2_MathArena_brumo_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K2_MathArena_cmimc_2025.csv  matharena_Qwen_Qwen2.5-3B-Instruct-AWQ_tau-1.0_M6_K2_MathArena_hmmt_nov_2025.csv  (+15 more)
scripts/: reproduce_matharena_mix_prm.sh  run_prm_analysis.sh  (+4 more)
(+46 files in other folders)
