[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tt_scale"
version = "0.1.0"
description = "Custom test-time scaling library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "bitsandbytes",
    "accelerate"
]

[tool.setuptools]
packages = ["tt_scale"]